<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="detail_monument_created">Monument created successfully</string>

    <string name="general_app_name">Monuments</string>

    <string name="drawer_subtitle_header">Powered by SDOS</string>

    <string name="drawer_title_header">Monuments App</string>

    <string name="drawer_monuments_menu">Monuments</string>

    <string name="drawer_favorites_menu">Favorites</string>

    <string name="drawer_my_monuments_menu">My Monuments</string>

    <string name="detail_name_input">Name</string>

    <string name="detail_lastname_input">lastName</string>

    <string name="detail_email_input">Email</string>

    <string name="detail_password_input">Password</string>

    <string name="detail_confirm_password">Confirm password</string>

    <string name="detail_forgot_password">Forgot password?</string>

    <string name="detail_btn_register">New account</string>

    <string name="detail_login_btn">Log in</string>

    <string name="detail_btn_back">Back</string>

    <string name="detail_btn_forgot_password">Reset password</string>

    <string name="detail_search_fragment_name">name</string>

    <string name="detail_type_home_button">showNavigationBackButton</string>

    <string name="detail_account_created">Account created!!, you need to verify your email</string>

    <string name="error_collision_user">This account already exist</string>

    <string name="error_invalid_user">Incorrect email format</string>

    <string name="error_too_many_request">Too many request, please reset your password</string>

    <string name="error_invalid_credentials">The password is incorrect or the user does not exist</string>

    <string name="error_invalid_email">The user does not exist</string>

    <string name="error_verify_email">Verify your email</string>

    <string name="detail_restore_password_email_sent">message sent to your mail</string>

    <string name="detail_empty_list_my_monuments">Without own monuments \n Do not be afraid, press the add button</string>

    <string name="detail_add_monument_name">Name</string>

    <string name="detail_add_monument_description">Description</string>

    <string name="detail_add_monument_city">City</string>

    <string name="detail_add_monument_location">Location</string>

    <string name="detail_add_monument_images">Images</string>

    <string name="detail_add_monument_btn">Add monument</string>

    <string name="detail_add_monument_url">Url</string>

    <string name="detail_empty_list_favorite_monuments">No added favorites \n The star is your friend</string>

    <string name="detail_add_comment_btn">Rate the monument!</string>

    <string name="detail_label_no_comments">No comments…yet</string>

    <string name="detail_label_fragment_add_monument">AddMonumentsFragment</string>

    <string name="detail_label_fragment_detail">DetailFragment</string>

    <string name="detail_add_comment_hint">Write a comment</string>

    <string name="detail_dialog_cancel_button">Cancel</string>

    <string name="detail_dialog_add_button">Add comment</string>

    <string name="detail_dialog_tag">Add comment Dialog</string>

    <string name="error_empty_data">There are empty values</string>

    <string name="detail_map_filter_label">Filter:</string>

    <string name="detail_comments_text">Comments: </string>

    <string name="detail_remove_monument">Are you sure that you want to delete this monument?</string>

    <string name="detail_cancel_remove">Cancel</string>

    <string name="detail_accept_remove">Remove</string>

    <string name="detail_remove_dialog_confirm">Confirm</string>

    <string name="error_same_user">You only can delete monuments that you have created</string>

    <string name="detail_monument_deleted">Monument deleted</string>

    <string name="error_null_values">This field cannot be empty</string>
    <string name="error_password_not_match">Passwords do not match</string>
    <string name="detail_logout_btn">Log out</string>
    <string name="detail_dialog_exit">Exit</string>
    <string name="detail_log_out_text">Are you sure that you want to log out?</string>
    <string name="detail_log_out">Log Out</string>
    <string name="detail_refresh_comments_btn">Refresh</string>
    <string name="error_invalid_credentials_reset_password">This email does not exist</string>

    <string-array name="detail_map_filter">
        <item>All</item>
        <item>5.000 km</item>
        <item>1.000 km</item>
        <item>500 km</item>
        <item>100 km</item>
        <item>50 km</item>
        <item>10 km</item>
        <item>5 km</item>
        <item>1 km</item>
    </string-array>
</resources>