<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.comments.CommentsFragment">



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comments__list__all_comments_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/comments__btn__add_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments_Progress__progress_bar" />

    <Button
        android:id="@+id/comments__btn__add_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_add_comment_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/comments__img__no_comments_img"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/comments"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/comments__list__all_comments_list"
        app:layout_constraintStart_toStartOf="@+id/comments__list__all_comments_list"
        app:layout_constraintTop_toTopOf="@+id/comments__list__all_comments_list" />

    <TextView
        android:id="@+id/comments__label__no_comments_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/detail_label_no_comments"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments__img__no_comments_img" />

    <TextView
        android:id="@+id/comments__label__comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:text="@string/detail_comments_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <ProgressBar
        android:id="@+id/comments_Progress__progress_bar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments__label__comments" />

</androidx.constraintlayout.widget.ConstraintLayout>